fix: z-index

--- a/src/components/Navbars/Navbars.module.scss
+++ b/src/components/Navbars/Navbars.module.scss
@@ -10,6 +10,7 @@
     height: 100vh;
     //justify-content: space-between;
     background: #FFFFFF;
+    z-index: 9999;
 
 }
 
