--- a/src/components/RecommendList/RecommendList.module.scss
+++ b/src/components/RecommendList/RecommendList.module.scss
@@ -3,15 +3,16 @@
 .recommendListContainer {
     position: relative;
     width: 100%;
-    height: 60%; //算過731差不多等於60%
     top: 16px;
     /* grayscale/dark-20 */
     background: #FAFAFB;
     //border-radius: 16px; 
+ 
+    
+    
 }
 
 /* card/popular */
-
 .recommendCard {
     display: flex;
     align-items: flex-start;
@@ -22,11 +23,10 @@
 }
 
 .avatar {
-    //position: absolute;
     width: 50px;
     height: 50px;
     margin-right: 16px;
-    //top: 16px;
+
 }
 
 .userInfo {
