--- a/src/components/TweetModal/TweetModal.module.scss
+++ b/src/components/TweetModal/TweetModal.module.scss
@@ -1,7 +1,7 @@
 @import"../../style/base.scss";
 
 .background {
-  z-index: 1000; //浮起來
+  z-index: 9999; //浮起來
   width: 100%;
   height: 100%;
   background-color: rgba(51, 54, 56, 0.4);
