--- a/src/pages/SettingPage/SettingPage.module.scss
+++ b/src/pages/SettingPage/SettingPage.module.scss
@@ -21,8 +21,7 @@
 .leftColumn,
 .rightColumn {
   background-color: #fff;
-  position: sticky; /* 改為 sticky */
-  top: 0; /* 固定在頂部 */
+
   height: 100vh; /* 使用 viewport 高度 */
 }
 
